# rawEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp
data/: env.lvl  env3.lvl  mesh.geom  testLevel.geom
data/shaders/: basic_fragment.glsl  basic_vertex.glsl  blur_fragment.glsl  blur_vertex.glsl  fullscreen_fragment.glsl  normal_depth_vertex.glsl  quad_fragment.glsl  quad_vertex.glsl  renderToTexture_frag.glsl  renderToTexture_vert.glsl  ssao_fragment.glsl  trig_fragment.glsl  trig_vertex.glsl
data/shaders/particles/: point_fragment.glsl  point_geom.glsl  point_vertex.glsl
data/shaders/particles/fountain/: fountain_fragment.glsl  fountain_geom.glsl  fountain_vertex.glsl
data/textures/: crete_beton_dirt_01.dds  crete_walls_01.dds  particle.dds  tile_walls_pink_01.dds
libs/GL/: glext.h
src/core/: App.cpp  App.h  input.cpp  input.h  platform.h  timer.cpp  timer.h
src/game/: camera.cpp  camera.h  entity.cpp  entity.h  player.cpp  player.h
src/game/particle/: fireRing.cpp  fireRing.h  fountain.cpp  fountain.h  fountainEmitter.cpp  fountainEmitter.h  particle.h  particleEmitter.cpp  particleEmitter.h  particleSystem.cpp  particleSystem.h
src/game/weapons/: Bullet.h  Gun.cpp  Gun.h  Weapon.cpp  Weapon.h
src/libTexture/: compressedTexture.cpp  compressedTexture.h  data.cpp  data.h  ddsDefs.h  ddsLoader.cpp  ddsLoader.h  libTexture.cpp  libTexture.h  texture.cpp  texture.h  textureLoader.h  typeDefs.h
src/math/: constant.h  mat4.cpp  mat4.h  quat.cpp  quat.h  random.h  transform.h  vec2.h  vec3.cpp  vec4.h
src/renderer/: glbuffer.h  model.cpp  model.h  renderBatcher.cpp  renderBatcher.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertex.h
src/renderer/data/: mesh.cpp  mesh.h
src/renderer/opengl/: openGLExtensions.cpp  openGLExtensions.h
src/scene/: loadLevel.cpp  loadLevel.h
src/util/: ddsLoader.cpp  ddsLoader.h  recyclingArray.h  stream.cpp  stream.h
